// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expandable renders correctly opened 1`] = `
<DocumentFragment>
  .css-rk9ngy-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: visible;
  height: auto;
  max-height: initial;
}

<div
    class="css-rk9ngy-StyledExpandable e5hc7t70"
  >
    Sample Expandable
  </div>
</DocumentFragment>
`;

exports[`Expandable renders correctly with animationDuration 1`] = `
<DocumentFragment>
  .css-1b4l2xb-StyledExpandable {
  -webkit-transition: max-height 500ms ease-out,opacity 500ms ease-out;
  transition: max-height 500ms ease-out,opacity 500ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

<div
    class="css-1b4l2xb-StyledExpandable e5hc7t70"
  >
    Sample Expandable
  </div>
</DocumentFragment>
`;

exports[`Expandable renders correctly with className 1`] = `
<DocumentFragment>
  .css-lzuy3q-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

<div
    class="test css-lzuy3q-StyledExpandable e5hc7t70"
  >
    Sample Expandable
  </div>
</DocumentFragment>
`;

exports[`Expandable renders correctly with default values 1`] = `
<DocumentFragment>
  .css-lzuy3q-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

<div
    class="css-lzuy3q-StyledExpandable e5hc7t70"
  >
    Sample Expandable
  </div>
</DocumentFragment>
`;

exports[`Expandable renders correctly with minHeight 1`] = `
<DocumentFragment>
  .css-1klfd8t-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 5px;
}

<div
    class="css-1klfd8t-StyledExpandable e5hc7t70"
  >
    Sample Expandable
  </div>
</DocumentFragment>
`;
